--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -44,3 +44,25 @@ h2{
     
 }
 
+input[type=number]::-webkit-inner-spin-button { 
+    -webkit-appearance: none;
+    
+}
+input[type=number] { 
+   -moz-appearance: textfield;
+   appearance: textfield;
+
+}
+
+#spanPadrao{
+    color: red;
+}
+
+
+#spanSenhaForte{
+    color: green;
+}
+
+#spanSenhaFraca{
+    color: blue;
+}
