--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -6,58 +6,54 @@
     padding-left: 20px;
 }
 
-/* CARDS  */
+/* CARD PUBLICAR  */
 
 .card{
     display: flex;
     justify-content: right;
-    margin-top: 6%;
+    box-shadow: 1px 2px #b4b4b4;
 }
 
-/* IMAGEM PERFIL */
-
-.imagemPerfil{
-  background-color: #aaa;
-  border-radius: 50%;
-  width: 150px;
-  height: 150px;
-  margin-left: 17%;
-  margin-top: 8%;
-  overflow: hidden;
-  position: relative;
-}
-
-
-/* NUMERO AO LADO DE MENSAGENS-NOTIFICAÇOES */
-
-#badge{
- background-color: #138496;
- color: white;
-
-}
-
-/* FOTO NO CARD DA POSTAGEM */
+/* FOTO NO CARD DA PUBLICAÇÃO */
 
 #fotopost{
+
     background-color: #aaa;
     border-radius: 50%;
     width: 50px;
     height: 50px;
     overflow: hidden;
     position: relative;
+
 }
 
 
-/* CARD DE PESQUISA */
+/* IMAGEM PERFIL */
 
-#cardpesquisar{
-    margin-top: 13% ;
+.imagemPerfil{
+  border-radius: 50%;
+  width: 180px;
+  height: 180px;
+  margin-left: 12%;
+  margin-top: 6%;
 }
+
+/* NUMERO AO LADO DE MENSAGENS-NOTIFICAÇOES */
+
+#badge{
+
+ background-color: #138496;
+ color: white;
+
+}
+
 
 /* CARD OPÇÕES DE SEGUIR */
 
 #opcoescurtir{
     margin-top: 10%;
+    margin-bottom: 10%;
+    box-shadow: 1px 2px #b4b4b4;
 }
 
 /* LINKS CURTIR-COMPARTILHAR-COMENTAR */
@@ -66,16 +62,16 @@
     color: #138496;
 }
 
-/* DROPDOWN EDITAR */
-
-#gedf-drop1{
-    color: #138496;
-}
-
-.dropdown-menu{
-color: #138496;
-}
+/* CURSOR LINKS */
 
 .nav-link{
     cursor: pointer;
 }
+
+.list-group{
+    box-shadow: 1px 2px  #b4b4b4;
+}
+
+.hidden{
+    display: none;
+  }
