--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <button type="button" data-toggle="modal" data-target="#modalLogin" class="btn btn-outline-dark">Entrar</button>
+    <button type="button" data-toggle="modal" data-target="#modalLogin" class="btn btn-outline-info">Entrar</button>
 
   </nav>
 </div>
@@ -204,132 +204,139 @@
 
 <!-- TEXTO BEM-VINDO HOME -->
 
-<div class="row">
-  <div class="col-md-6">
-    <div class="row tamanho">
-    </div>
-    <h1 class="display-3 d-flex justify-content-end ">Bem-Vindes à sua <br>
+<div class="row  d-flex justify-content-around">
+  <div class="col-md-6 mx-auto">
+
+    <h1 class="display-3">Bem-Vindes à sua <br>
       comunidade de inclusão profissional</h1>
   </div>
 
-  <div class="col-md-6" id="cadeirante">
-    <img src="../../assets/images/inclusao.png" width="420" height="450" title="imagem cadeira de rodas colorida"
+  <div class="col-md-6 mx-auto ">
+    <img src="../../assets/images/inclusao.png" id="cadeirante" title="imagem cadeira de rodas colorida"
       alt="imagem cadeira de rodas colorida">
   </div>
 </div>
 
 <div class="arrowicon">
-<a class="nav-link" (click)="triggerScrollToQS()"> <img src="../../assets/images/arrow-16-512.png" width="25" height="25"> </a>
+  <a class="nav-link" (click)="triggerScrollToQS()"> <img src="../../assets/images/setaparabaixo.gif" width="45"
+      height="45"> </a>
 </div>
 
 <!-- TEXTO SOBRE NÓS QUEM SOMOS -->
 
 
 <div class="row text-center" id="sobrenos">
-    <div class="col-md-12">
-      <h3 class="lead display-4" >Quem Somos</h3>
 
-      <p> O ClickIn é uma rede que tem como foco estimular a inclusão de PCD’s no mercado de trabalho, para
-        facilitar o acesso a informações e atualidades do meio. Viabilizar a conexão entre empregadores e profissionais
-        PCDs da-se na busca por mapear e entender quais são as
-        necessidades e requisitos para incluir essa população nas empresas. A partir de entrevistas e pesquisas, foram
-        coletadas histórias, impressões, dados sobre esse público. Num segundo momento, como parte do projeto, vídeos
-        foram
-        gravados para dar visibilidade a história dos nossos embaixadores que exemplificam os desafios dos profissionais
-        a
-        ingressar no mercado. O objetivo do projeto é, de um lado, mostrar como à falta de inclusão e
-        representatividade, e
-        também estimular referências positivas.</p>
+  <div class="col-md-5">
+    <img src="../../assets/images/sobrenos.jpg" id="deficientesfoto">
+  </div>
 
-      </div>
-    </div>
+  <div class="col-md-7">
+    <h3 class="lead display-4 mb-4">ClickIn</h3>
+
+    <p> É uma rede social que tem como foco estimular a inclusão de PCD’s no mercado de trabalho, para
+      facilitar o acesso a informações e atualidades do meio. Viabilizar a conexão entre empregadores e profissionais
+      PCDs da-se na busca por mapear e entender quais são as
+      necessidades e requisitos para incluir essa população nas empresas. A partir de entrevistas e pesquisas, foram
+      coletadas histórias, impressões, dados sobre esse público. Num segundo momento, como parte do projeto, vídeos
+      foram
+      gravados para dar visibilidade a história dos nossos embaixadores que exemplificam os desafios dos profissionais
+      a
+      ingressar no mercado. O objetivo do projeto é, de um lado, mostrar como à falta de inclusão e
+      representatividade, e
+      também estimular referências positivas.</p>
+
+  </div>
+</div>
+
+<div class="parallaxdois"></div>
 
 <!-- CARROUSEL NOSSO TIME QUEM SOMOS -->
 
+<h3 class="lead display-4 mb-4">Nosso Time </h3>
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-      </ol>
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+  </ol>
 
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../../assets/images/camila.png" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img src="../../assets/images/luis.png" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img src="../../assets/images/leo.png" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-          <img src="../../assets/images/dani.png" alt="Third slide">
-        </div>
-        <div class="carousel-item">
-          <img src="../../assets/images/felipe.png" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../../assets/images/camila.png" alt="First slide">
     </div>
-
-    <!-- TEXTO DA PÁGINA EMBAIXADORES -->
-
-<div class="container">
-    <div class="row" id="embaixadores">
-        <div class="col-md-6">
-            <div class="card-body" id="texto">
-
-                <h2 class="acessibilidade display-4  p-0 mb-4">Nossas Inspirações</h2> <br>
-                <p class="acessibilidade"> Para viabilizar a criação do nosso projeto buscamos opiniões e informações.</p>
-                <p>Conhecer a realidade vivenciada pelos PCD's no processo de inclusão no mercado de trabalho foi nossa primeira missão para conseguir formar uma rede social com funcionalidade.</p>
-                <p>Aos entrevistados Mariana Neres, Cássia Regina, Thiago Cardoso, Thiago Demiquele, João Marinho e aos amigos e professores que apoiaram a nossa ideia nosso agradecimento especial.</p>
-
-            </div>
-        </div>
-
-        <div class="coll-md-6">
-            <div class="embed-responsive embed-responsive-16by9 video">
-                <iframe width="847" height="441" src="https://www.youtube.com/embed/jnGOfMVJrVY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
-
+    <div class="carousel-item">
+      <img src="../../assets/images/luis.png" alt="Second slide">
     </div>
+    <div class="carousel-item">
+      <img src="../../assets/images/leo.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img src="../../assets/images/dani.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img src="../../assets/images/felipe.png" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
-<!--
-<button onClick="fonte('a');">+</button>
-<button onClick="fonte('d');">-</button>
--->
+<!-- TEXTO DA PÁGINA EMBAIXADORES -->
+<div class="parallax"></div>
+<div class="container">
+  <div class="row" id="embaixadores">
+    <div class="col-md-6">
+      <div class="card-body" id="texto">
+
+        <h2 class="acessibilidade display-4  p-0 mb-4">Nossas Inspirações</h2> <br>
+        <p class="acessibilidade"> Para viabilizar a criação do nosso projeto buscamos opiniões e informações.
+          Conhecer a realidade vivenciada pelos PCD's no processo de inclusão no mercado de trabalho foi nossa primeira
+          missão para conseguir formar uma rede social com funcionalidade.
+          Aos entrevistados Mariana Neres, Cássia Regina, Thiago Cardoso, Thiago Demiquele, João Marinho e aos amigos e
+          professores que apoiaram a nossa ideia nosso agradecimento especial.</p>
+
+      </div>
+    </div>
+
+    <div class="coll-md-6">
+      <div class="embed-responsive embed-responsive-16by9 video">
+        <iframe width="847" height="441" src="https://www.youtube.com/embed/jnGOfMVJrVY" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<div class="arrowicon">
+  <a class="nav-link" (click)="triggerScrollToEm()"> <img src="../../assets/images/setaparacima.gif" width="45"
+      height="45"> </a>
+</div>
 
 
+<!-- FOOTER -->
 
-       <!-- FOOTER -->
+<hr>
 
-       <hr>
-
-       <div class="col-md-12">
-         <div id="textorodape">
-           <strong>ClickIn&reg;</strong> 2020 <strong>|</strong>
-         
-          
-            <a class="nav-link" [routerLink]="'/contato'">Contato </a><strong>|</strong>
-            <a class="nav-link" [routerLink]="'/faq'">Ajuda</a>
-
- 
-     
-
-         </div>
-       </div>
-
+<div class="row">
+  <div class="col-md-12 d-flex justify-content-center">
+      <strong>ClickIn&reg;</strong>2020
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12 d-flex justify-content-center mb-3">
+      <a class="nav-link mr-1 m-0 p-0" [routerLink]="'/contato'">Contato</a><strong>|</strong>
+      <a class="nav-link ml-1 m-0 p-0" [routerLink]="'/faq'">Ajuda</a>
+  </div>
+</div>
