--- a/src/app/noticias/noticias.component.css
+++ b/src/app/noticias/noticias.component.css
@@ -1,11 +1,58 @@
+/* LOGO CLICKIN */
+
 #logo{
-    left: 50px; /* posiciona a 90px para a esquerda */ 
-    top: 330px; /* posiciona a 70px para baixo */
-    width: 200px;
-    padding-top: 20px;
+    width: 150px;
+    padding-top: 15px;
     padding-left: 20px;
 }
+
+/* CARDS  */
+
+.card{
+    display: flex;
+    justify-content: right;
+    margin-top: 6%;
+}
+
+.card-img{
+    width: 100%;
+    height: 100%;
+}
+
+/* IMAGEM PERFIL */
+
+.imagemPerfil{
+  border-radius: 50%;
+  width: 180px;
+  height: 180px;
+  margin-left: 12%;
+  margin-top: 8%;
+}
+
+
+/* NUMERO AO LADO DE MENSAGENS-NOTIFICAÇOES */
+
+#badge{
+
+ background-color: #138496;
+ color: white;
+
+}
+
 #titulo{
     display: flex;
     text-align: center;
+}
+
+/* TEXTO DOS CARDS */
+
+
+p{
+    text-align: justify;
+    margin-right: 6%;
+}
+
+.list-group{
+    box-shadow: 1px 2px  #b4b4b4;
+
 }
